--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="br.com.zup.exerciciofirebaseauthentication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,13 +16,13 @@
         android:theme="@style/Theme.ExercicioFirebaseAuthentication"
         tools:targetApi="31">
         <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
+            android:name=".ui.register.view.RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".ui.home.view.HomeActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".ui.login.view.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,5 +31,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
