--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="br.com.zup.exerciciofirebaseauthentication" >
+    package="br.com.zup.exerciciofirebaseauthentication">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +15,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExercicioFirebaseAuthentication"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <service
+            android:name=".data.datasource.remote.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity
+            android:name=".ui.cloudmessagen.view.CloudMessageActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.register.view.RegisterActivity"
             android:exported="false" />
@@ -23,7 +35,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.login.view.LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
