--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:theme="@style/Theme.ExercicioFirebaseAuthentication"
         tools:targetApi="31">
         <activity
-            android:name=".FavoriteActivity"
+            android:name=".ui.favorite.view.FavoriteActivity"
             android:exported="false" />
         <activity
-            android:name=".CreateMessageActivity"
+            android:name=".ui.createmessage.view.CreateMessageActivity"
             android:exported="false" />
         <activity
             android:name=".ui.register.view.RegisterActivity"
